--- a/frontend/TypeScript/frontend/index.html
+++ b/frontend/TypeScript/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>TypeScript HTML App</title>
+  <title>逢坂 七海</title>
   <style>
     html, body {
       overflow: hidden;
